# LoggerLite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  issues_notebook.github-issues  main.cpp  pyproject.toml  ruff.toml
configs/: GoldenConfigConsole.txt  GoldenConfigFile.txt
examples/: __init__.py  example.ipynb  example.py
include/: CommonDefs.hpp  LogSink.hpp  Logger.hpp
src/: Logger.cpp  __init__.py
tests/: __init__.py
